(process) Janky hack to launch processes as tranisent systemd units